--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,12 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      - name: Debug SSH Connection
+        run: |
+          echo -e "${{ secrets.EC2_SSH_KEY }}" > DiGi_Salesta.pem
+          chmod 600 DiGi_Salesta.pem
+          ssh -v -o StrictHostKeyChecking=no -i DiGi_Salesta.pem ec2-user@54.95.36.216        
+
       - name: Deploy to EC2 Server
         env:
           SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
