--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,23 +11,16 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3  
 
-       - name: Debug SSH Key
+      - name: Save SSH Key
         run: |
-          echo "${{ secrets.EC2_SSH_KEY }}" > debug_key.pem
-          cat debug_key.pem        
+          echo "${{ secrets.EC2_SSH_KEY }}" | tr -d '\r' > private_key.pem
+          chmod 600 private_key.pem
 
       - name: Deploy to EC2 Server
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
-          EC2_USER: ec2-user
-          EC2_HOST: 54.95.36.216
         run: |
-          echo -e "$SSH_PRIVATE_KEY" > private_key.pem
-          chmod 600 private_key.pem
-          
-          ssh -o StrictHostKeyChecking=no -i private_key.pem $EC2_USER@$EC2_HOST << EOF
+          ssh -o StrictHostKeyChecking=no -i private_key.pem ec2-user@54.95.36.216 << 'EOF'
             sudo rm -rf /var/www/html/*
             git clone https://github.com/keramot-it/keramot-project-repo.git /var/www/html/
             sudo systemctl restart nginx
