Added GitHub Actions workflow 8th time

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,6 @@ jobs:
           set -e  # Exit immediately if any command fails
           ssh -o StrictHostKeyChecking=no -i DiGi_Salesta.pem ec2-user@54.95.36.216 << 'EOF'
             sudo rm -rf /var/www/html/*
-            git clone https://${{ secrets.GITHUB_TOKEN }}@github.com/keramot-it/keramot-project-repo.git /var/www/html/
+            git clone git@github.com:keramot-it/keramot-project-repo.git /var/www/html/
             sudo systemctl restart nginx
           EOF
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
