--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           set -e  # Exit immediately if any command fails
           ssh -o StrictHostKeyChecking=no -i DiGi_Salesta.pem ec2-user@54.95.36.216 << 'EOF'
+            sudo chown -R ec2-user:ec2-user /var/www/html
             sudo rm -rf /var/www/html/*
             git clone git@github.com:keramot-it/keramot-project-repo.git /var/www/html/
             sudo systemctl restart nginx
